05-frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: guestbook
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: guestbook.app00.kubeworkshop.inet.co.th
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
